--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
               </div>
               <p class="description">
                 • Fixed front-end features and product-related issues
-                • Developed front-end sample projects using the most popular React frameworks (NextJS, Gatsby, Vue,
-                Nuxt)
+                • Developed front-end sample projects using the most popular React frameworks
                 • Interacted daily with users on the <a href="https://community.prismic.io/u/Pau/summary"
                   target="_blank">Prismic Community forum</a>
                 • Participated in product meetings with internal teams based on feedback from client interactions
